Mon Jul 26 01:51:16 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tools/System_Health/Interceptors/SHS_CORBA_Transport.h:
        * DAnCE/tools/System_Health/Interceptors/SHS_Transport.h:

          Add virtual destructor.

Mon Jul 26 01:48:33 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/LocalityManager/ExplicitExec/ExplicitExec.mpc:

          Prevent a possible race condition during parallel builds.

Mon Jul 26 01:14:21 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Configuration/CPU_Affinity.h:
        * DAnCE/LocalityManager/Configuration/CPU_Affinity.cpp:
        * DAnCE/LocalityManager/Configuration/CPU_Affinity_export.h:
        * DAnCE/LocalityManager/Configuration/Configuration.mpc:
        * DAnCE/LocalityManager/Configuration/Process_Name.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

          CPU Affinity configuration plugin.  Currently works on Linux
          kernel 2.5.8 or later.

Sat Jul 24 07:04:38 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/Base.idl:
          Added.

Fri Jul 23 17:41:04 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/ciao_tests.lst:

          Add in the Hello SHS test.

Fri Jul 23 17:37:45 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/LocalityManager/ExplicitExec:
        * DAnCE/tests/LocalityManager/ExplicitExec/Deployment.cdp:
        * DAnCE/tests/LocalityManager/ExplicitExec/ExplicitExec.mpc:
        * bin/ciao_tests.lst

          Test for explicitly using a locality executable name other than
          dance_locality_manager.

Fri Jul 23 16:06:57 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Configuration/Process_Name.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

          Bugfixes.
